sourced bootstrap css in drive to avoid school filter

--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<!-- bootstrap-->
+    <link rel="stylesheet" href="https://drive.google.com/uc?export=view&id=1L5J7FuKENOVb0CsCXXDJJ769v8Jc9o39">
 <script
 src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
 </script>
